--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Matias Nevaranta"
-  avatar           : "/assets/images/photo.jpg"
+  avatar           : "/assets/images/photo.jpeg"
   bio              : "BSc & BBA"
   location         : "Woods"
   email            :
