--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Telkku"
-    url: www.telkku.com
+    url: https://www.telkku.com
   - title: "Youtube"
     url: https://www.youtube.com
   - title: "Jisho"
