--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
   name             : "Matias Nevaranta"
   avatar           : "/assets/images/photo.jpeg"
   bio              : "BSc & BBA"
-  location         : "Woods"
+  location         : "Woods, Lavia"
   email            :
   uri              :
   bitbucket        :
