--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ social:
 analytics:
   provider               : "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-138867662-1"
+    tracking_id          : UA-138867662-1
 
 
 # Site Author
