--- a/_config.yml
+++ b/_config.yml
@@ -70,9 +70,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               : false # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : UA-138867662-1
+    tracking_id          : 
 
 
 # Site Author
